EXPLAIN UNION using same routing which used for execution which allow return correct bug messages (Bug #3639) EXPLAIN of hidden SELECT of UNION